kubernetes/apps/kopiur-system/kopiur/repository/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 401"]
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: domain-5-subdomain-https
  hostnames:
    - "kopia.${DOMAIN_5}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: r2-kopia-ui
          port: 51515
